[package]
name = "zephyr-macros"
version = "0.1.1"
edition = "2021"
description = "Macros for the zephyr sdk"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "2.0.39"


[lib]
proc-macro = true