[package]
name = "retroshade-sdk-macros"
version = "0.1.0"
edition = "2021"
authors = ["Tommaso De Ponti @ xyclooLabs <tommaso@xycloo.com>"]
description = "Macros to generate Retroshade events implementations."
documentation = "https://docs.mercurydata.app/"
homepage = "https://mercurydata.app/zephyr-vm/"
keywords = ["wasm", "sdk", "blockchain", "soroban"]
license = "Apache-2.0"

[dependencies]
quote = "1.0"
syn = "2.0"
convert_case = "0.6.0"

[lib]
proc-macro = true
