[package]
name = "rs-zephyr-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for building Zephyr programs."
documentation = "https://docs.mercurydata.app/"
homepage = "https://mercurydata.app/zephyr-vm/"
keywords = ["wasm", "sdk", "blockchain"]
license = "Apache-2.0   "

[dependencies]
wee_alloc = "0.4.5"
stellar-xdr = { version = "20.1.0", default-features = false, features=["next", "serde", "base64"] }
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.49"
rs-zephyr-common = { version = "0.1.0" }
macros = { package = "zephyr-macros", version = "0.1.0" }
serde_json = "1.0"

[dependencies.soroban-sdk]
version = "20.5.0"
git = "https://github.com/heytdep/rs-soroban-sdk"
features = ["std"]
