[package]
name = "mercury-cli"
version = "0.2.1"
description = "Mercury CLI."
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/szabgab/rs-zephyr-toolkit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
hex = "0.4.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0"
toml = "0.8.9"
