[package]
name = "rs-zephyr-common"
version = "0.1.7"
edition = "2021"
description = "Common structures between the zephyr sdk and vm"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.49"
serde = { version = "1.0", features = ["derive"] }
http = "1.1.0"

[dependencies.stellar-xdr]
version = "=21.2.0"
#git = "https://github.com/stellar/rs-stellar-xdr"
#rev = "44b7e2d4cdf27a3611663e82828de56c5274cba0"
features=["next", "curr", "serde", "base64"]

[dependencies.soroban-sdk]
version = "21.5.0"
#git = "https://github.com/heytdep/rs-soroban-sdk"
#rev = "b6c64e621651caf9180af7be827422507bebb22e"
features = ["alloc"]
