[package]
name = "zephyr-sdk"
version = "0.2.2-rc3"
edition = "2021"
authors = ["Tommaso De Ponti @ xyclooLabs <tommaso@xycloo.com>"]
description = "Rust SDK for building Zephyr programs."
documentation = "https://docs.mercurydata.app/"
homepage = "https://mercurydata.app/zephyr-vm/"
keywords = ["wasm", "sdk", "blockchain"]
license = "Apache-2.0"

[dependencies]
wee_alloc = "0.4.5"
stellar-xdr = { version = "20.1.0", default-features = false, features = [
    "next",
    "serde",
    "base64",
] }
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.49"

rs-zephyr-common = { version = "0.1.6" }
#rs-zephyr-common = { path = "../zephyr-common" }

macros = { package = "zephyr-macros", version = "0.1.1" }
#macros = { package = "zephyr-macros", path = "../macros" }

serde_json = "1.0"
stellar-strkey = "0.0.8"
charming-fork-zephyr = "0.3.1"

#zephyr = { package = "zephyr-vm", path = "../../zephyr/rs-zephyr-env", features = [
#    "testutils",
#], optional = true }

zephyr = { package = "zephyr-vm", version = "0.2.0", features = [
    "testutils",
], optional = true }

ed25519-dalek = ">= 2.1.1"
sha2 = "0.10.7"

[dependencies.soroban-sdk]
version = "21.5.0"
#path = "../../rs-soroban-sdk/soroban-sdk"
features = ["alloc"]

[features]
default = []
testutils = ["dep:zephyr"]
