[package]
name = "zephyr-sdk"
version = "0.2.5"
edition = "2021"
authors = ["Tommaso De Ponti @ xyclooLabs <tommaso@xycloo.com>"]
description = "Rust SDK for building Zephyr programs."
documentation = "https://docs.mercurydata.app/"
homepage = "https://mercurydata.app/zephyr-vm/"
keywords = ["wasm", "sdk", "blockchain"]
license = "Apache-2.0"

[dependencies]
wee_alloc = "0.4.5"
stellar-xdr = { version = "=22.0.0-rc.1.1", default-features = false, features = [
    "next",
    "serde",
    "base64",
] }
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.49"
rs-zephyr-common = { version = "0.1.6" }
macros = { package = "zephyr-macros", version = "0.1.1" }
serde_json = "1.0"
stellar-strkey = "0.0.8"
charming-fork-zephyr = "0.3.1"
ed25519-dalek = "2.1.1"
sha2 = "0.10.7"
soroban-fixed-point-math = { version = "1.0.0", optional=true }

[dependencies.soroban-sdk]
version = "21.7.6"
features = ["alloc"]

[features]
default = ["protocols"]
protocols = ["dep:soroban-fixed-point-math"]
