[package]
name = "test-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zephyr-sdk = { version="0.1.8", features = [] }
zephyr-sdk = { path = "../../zephyr-sdk", features = [] }

stellar-strkey = "0.0.8"

[dev-dependencies]
zephyr-sdk = { path = "../../zephyr-sdk", features = ["testutils"] }
#zephyr-sdk = { version="0.1.8", features = ["testutils"] }
tokio = {version = "1.0", features = ["full"]}

#ledger-meta-factory = { path = "../../../zephyr/ledger-meta-factory", features = [] }
ledger-meta-factory = { version="0.1.1", features = [] }

[dev-dependencies.stellar-xdr]
version = "=20.1.0"
#git = "https://github.com/stellar/rs-stellar-xdr"
#rev = "44b7e2d4cdf27a3611663e82828de56c5274cba0"
features=["next", "curr", "serde", "base64"]


[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
